# MobileMonitor

./: README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolo.cpp  yolo.h  yolov8ncnn.cpp
android/app/src/main/java/com/yuuki/Object_Detect/: MainActivity.java  Yolov8Ncnn.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
windows/: Motinor.sln
windows/Motinor/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Motinor.csproj
